feat: allow to filter reports based on target
